--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -10,9 +10,9 @@
         <li><a href="/">Home</a></li>
         {{/if}}
         {{#if isMenu}}
-        <li><a href="/menu" class="active">Menu</a></li>
+        <li><a href="/menu/all" class="active">Menu</a></li>
         {{else}}
-        <li><a href="/menu">Menu</a></li>
+        <li><a href="/menu/all">Menu</a></li>
         {{/if}}
         {{#if isAuth}}
         {{#if isRecipe}}
