--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,8 +35,8 @@
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
         est laborum. </p>
       <div class="waves-effect orange btn-large">
-        <a href="#" target="_blank">
-          <div>Read more</div>
+        <a href="/about" target="_blank">
+          Read more
         </a>
       </div>
     </div>
